[serving] Adds workflow model loading for SageMaker (#661)
* [serving] Adds workflow model loading for SageMaker

1. Removed global preferences for workflow definition
2. Updated README